[package]
name = "forvo-cli"
version = "0.1.0"
authors = ["Francesco Urbani <francescourbanidue@gmail.com>"]
edition = "2018"
description = "Play Forvo pronunciations directly from the terminal"
repository = "https://github.com/urbanij/forvo-cli/"
keywords = ["forvo", "pronunciations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# soup = "0.5.0"
requests = "0.0.30"
regex     = "1.4.3"
argparse  = "0.2.2"
# exitcode  = "1.1.2"