[package]
name = "forvo-cli"
version = "0.1.2"
authors = ["Francesco Urbani <francescourbanidue@gmail.com>"]
edition = "2018"
readme = "README.md"
# license-file = "LICENSE.txt"
license = "MIT"
description = "Play Forvo pronunciations directly from the terminal"
repository = "https://github.com/urbanij/forvo-cli/"
documentation = "https://docs.rs/forvolib"

keywords = ["forvo", "pronunciations"]
exclude = ["LICENSE.txt"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# soup = "0.5.0"
reqwest = "0.9.24"
regex = "1.4.3"
argparse = "0.2.2"
# exitcode  = "1.1.2"


[lib]
name = "forvolib"
path = "src/lib.rs"

[[bin]]
name = "forvo-cli"
path = "src/bin.rs"
